@@ -52,6 +52,8 @@ version 1.9.4, in progress
   the constant was not given in first place among the regressors
 - Fix bug: the "diff" command applied to a lead of a series could produce 
   spurious values with panel data
+- Fix bug: segfault with nested loops when the outer loop resamples the
+  dataset and the inner one generates a series
 
 2010-11-29 version 1.9.3
 - New estimation command "biprobit" (bivariate probit)
